# actix_web_book_service

./: Cargo.toml  readme.md
postman/: Rust Web API Book.postman_collection.json
scripts/: wrk_post.lua
src/: main.rs
src/books/: models.rs  services.rs
