[package]
name = "actix_web_book_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
nanoid = "0.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html